refactor project structure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
 
     <string name="tab_news">Все</string>
     <string name="tab_favorite_news">Закладки</string>
+    <string name="toast_exit_app_warning_text">Tap again to exit</string>
 </resources>
