--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="tab_news">Все</string>
     <string name="tab_favorite_news">Закладки</string>
     <string name="toast_exit_app_warning_text">Tap again to exit</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
