--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,12 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="participant">Участники</string>
+    <string name="hike_information">Информация для похода</string>
+    <string name="material_lecture">Материалы, лекции</string>
+    <string name="tools">Снаряжение</string>
+    <string name="my_post">Моя должность</string>
+    <string name="route">Маршрут</string>
+    <string name="training_calendar">Календарь тренировок</string>
+    <string name="group_chat">Групповой чат</string>
 </resources>
