--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,11 @@
         <item>5 категория сложности</item>
         <item>6 категория сложности</item>
     </string-array>
+
+    <string-array name="type_hike_list">
+        <item>Горный</item>
+        <item>Лыжный</item>
+        <item>Пеший</item>
+        <item>Водный</item>
+    </string-array>
 </resources>
